@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 e6fe26232f33f808d5b7f014506076eba43006d2 ChangeLog
+SHA1 7a400c63f3bad28215a9487a6b3695a0d7fb6638 ChangeLog
 SHA1 62647027745e394450492878f8d8730548d83fa2 LICENSE
 SHA1 2405b691fcb18b468ccb31cab97babb75e4d1f30 MANIFEST
-SHA1 bb154b594337ddb0d753ca3c342f7db45785bf09 META.yml
-SHA1 ba7b28f33848621b85439409d891df2ae1353781 Makefile.PL
+SHA1 f2b79e0b94c97a8c4caaff5b9ebbeb66fa35fca9 META.yml
+SHA1 f3211d67207d093c133a563e9bfb23ce7056de82 Makefile.PL
 SHA1 05aead0f26b0f71a00bad5badbf390f2c92dcd1d README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 aa152c829fcf86957fd2012f6c30e5e18d3c76b2 bin/fullauto.pl
@@ -47,7 +47,7 @@ SHA1 6fed559b971e9d2f091e0776ddbb131be5225a36 inc/Module/Install/Win32.pm
 SHA1 ea528c813c3473a2674fcbed06531c2f795116ce inc/Module/Install/WriteAll.pm
 SHA1 00bb8470354d11bd7c2c74633083ebe627eb2b7e inc/Module/Install/with.pm
 SHA1 e1d3650b6801a3cb2e6de38574e9327914c96d40 install_mozrepl_plugin.ahk
-SHA1 6f672eecb82b8ccf7797330c16fcf20c388acc1c lib/Net/FullAuto.pm
+SHA1 8f4537e79aa5caa54158f7cb8cf97a31c3de10d8 lib/Net/FullAuto.pm
 SHA1 cc3f8588c96516de2802c68be465447d17f781aa lib/Net/FullAuto/Custom/BackUp/README
 SHA1 5032ba28f88dbf163b0d4dd158948af9124568c9 lib/Net/FullAuto/Custom/README
 SHA1 5b1702f20efb104e3375934cf55a7438c19e109a lib/Net/FullAuto/Distro/fa_code.pm
@@ -64,11 +64,11 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1
 
-iQEcBAEBAgAGBQJTtdERAAoJEBa/9Pad787E6U4H/iTCpEOAOFyCLrxayxx8x1A9
-tLO74xiVC1IM9fd+etJR7ekUHqZ3QCM87Ko1HFuwg7wa/G/jsGrzaDFWO+2PruUT
-J4UvT3oHkdCBffAa2v51kHtDDJNoIiKh95YY6VnFmEKnIHGv1mTS39CdtcUF06A4
-4VUnMbNRsNfR0l+D3t/au8ljGYUf3DChCi6IPNHlFawuvFDaIOM0s1Q3lVC84bA1
-t4xR5VxAN03V0MNCpAsNKylSpAs9UYqdbSbcDZO4Cap4QfkQy5mfE9UY30T/Ua6H
-31b5KLAnPfvLZ5OfPWmlAPQHSatrYlNYY7Fb4ORHj4Xd+4B/jwZ6LjpMLfXSvxc=
-=8vTi
+iQEcBAEBAgAGBQJTteU3AAoJEBa/9Pad787E0xkIAKLQEabjbvEptnaUqboRVlC6
+SuuljclOSq0KO+4pvdT4FWQxgryQf1K7Y9Fyn1/QR8h/0iZrClc1eH4tNl/SE0G1
+oxb+5F3fu+zg43ZkRkF19qVDIcuNSx7CuoBf2vXyR0kx9n0/u0Q9HxJFxoY+gi77
+aFF0C5Gi+0XYt6bB3MgTGOg2EQXMkxI1QdU/exRQnNzcq46lP3E0I9Jx98waChq9
+PFZiiGWHai3yx6w2GIIIWTYPp8SXgLQtORo2tSFuN/ULAL6NuOETVzvFVwwiU0b7
+jnTNOInIRle9eKO6lYXHSaRzFKJeQdReqcnORrqo6fACjakCtXEz5QYEiY1qeko=
+=QLzF
 -----END PGP SIGNATURE-----
