@@ -22,7 +22,7 @@ package Net::FullAuto;
 #######################################################################
 
 
-our $VERSION='0.9999999938';
+our $VERSION='0.9999999939';
 
 
 use 5.005;
